feat: enhance build tooling and project setup
- Update build scripts to use modern tooling (npm-run-all, rimraf, chokidar)
- Add copy-static script for asset management
- Improve dev workflow with watch mode and static file copying
- Update README with comprehensive setup and development instructions

--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "dist/background.js",
   "type": "module",
   "scripts": {
-    "clean": "powershell -NoProfile -Command \"if (Test-Path dist) { Remove-Item -Recurse -Force dist }\"",
-    "build": "tsup && npm run postbuild",
-    "postbuild": "powershell -NoProfile -Command \"Copy-Item 'public\\manifest.json' 'dist\\' -Force; if (Test-Path 'src\\ui\\popup.html') { Copy-Item 'src\\ui\\popup.html' 'dist\\' -Force }; if (Test-Path 'src\\ui\\popup.css') { Copy-Item 'src\\ui\\popup.css' 'dist\\' -Force }; if (Test-Path 'src\\content\\styles.css') { Copy-Item 'src\\content\\styles.css' 'dist\\' -Force }\"",
-    "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit"
+    "clean": "rimraf dist",
+    "copy:static": "node ./scripts/copy-static.mjs",
+    "build": "run-s clean build:ts copy:static",
+    "build:ts": "tsup",
+    "dev": "run-s clean copy:static && run-p dev:ts dev:static",
+    "dev:ts": "tsup --watch --sourcemap",
+    "dev:static": "chokidar \"public/manifest.json\" \"src/ui/**/*.{html,css}\" \"src/content/styles.css\" \"assets/**/*\" -c \"npm run copy:static\"",
+    "typecheck": "tsc --noEmit",
+    "check": "run-s typecheck",
+    "prepare": "npm run build"
   },
   "keywords": [
     "chrome-extension",
@@ -21,6 +26,9 @@
   "devDependencies": {
     "@types/chrome": "^0.1.12",
     "@types/node": "^24.5.2",
+    "chokidar-cli": "^3.0.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.5",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2"
   },
