--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,33 @@
-{
+{ 
+
   "manifest_version": 3,
   "name": "ChatGPT Virtualizer",
   "version": "1.0.0",
-  "description": "Chrome extension with virtual capabilities",
-  "permissions": [
-    "activeTab",
-    "storage"
+  "description": "Collapse/virtualize long ChatGPT conversations for a snappier UI.",
+  "minimum_chrome_version": "120",
+  "permissions": ["storage"],
+  "host_permissions": [
+    "https://chat.openai.com/*",
+    "https://chatgpt.com/*"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
       "matches": [
-        "<all_urls>"
+        "https://chat.openai.com/*",
+        "https://chatgpt.com/*"
       ],
-      "js": [
-        "content.js"
-      ]
+      "js": ["content.js"],
+      "css": ["styles.css"],
+      "run_at": "document_idle"
     }
   ],
   "action": {
-    "default_popup": "popup.html",
-    "default_title": "ChatGPT Virtualizer"
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "default_title": "ChatGPT Virtualizer",
+    "default_popup": "popup.html"
   }
 }
+
