feat: implement Phase 3 modular architecture
- Add clean modular structure with core/, features/, shared/, content/ directories
- Implement path aliases (@/core, @/shared, @/features, @/content) for better imports
- Add professional separation of concerns:
  * core/: Business logic (DOM, messaging, virtualization)
  * features/: Extension features (background, popup)
  * shared/: Reusable utilities and types
  * content/: Content script entry point
- Update tsconfig.json and tsup.config.ts for new structure
- Maintain 100% functionality preservation with enhanced organization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,24 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "@/core/*": [
+        "src/core/*"
+      ],
+      "@/features/*": [
+        "src/features/*"
+      ],
+      "@/shared/*": [
+        "src/shared/*"
+      ],
+      "@/content/*": [
+        "src/content/*"
+      ]
+    },
     "types": [
       "chrome",
       "node"
